take styling in css - could not fix layout for now (head not aligned with columns)

--- a/plugins/query_editor/static/css/query_editor.css
+++ b/plugins/query_editor/static/css/query_editor.css
@@ -1,3 +1,9 @@
+table.query-editor {
+    width: 95%;
+/* what is going on in there ? */
+/*    border: 1px solid #ff0000; */
+}
+
 /* Add a scrollbar to autocomplete fields */
 .ui-autocomplete {
         max-height: 100px;
